--- a/models/menu-templates/menu-2.html
+++ b/models/menu-templates/menu-2.html
@@ -23,7 +23,8 @@
 		  <a href='#' class='dropdown-toggle' data-toggle='dropdown'><i class='fa fa-wrench'></i> Site Settings <b class='caret'></b></a>
 		  <ul class='dropdown-menu'>
 			  <li class='navitem-site-settings'><a href='site_settings.php'><i class='fa fa-globe'></i> Site Configuration</a></li>
-			  <li class='navitem-site-pages'><a href='site_pages.php'><i class='fa fa-files-o'></i> Site Pages</a></li>
+              <li class='navitem-groups'><a href='groups.php'><i class='fa fa-users'></i> Groups</a></li>
+              <li class='navitem-site-pages'><a href='site_pages.php'><i class='fa fa-files-o'></i> Site Pages</a></li>
 		  </ul>
 	  </li>
   </ul>
