--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Userfrosting : A secure, modern user management system based on UserCake, jQuery, and Bootstrap." />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    
+    <link rel="canonical" href="http://www.userfrosting.com">
 
     <title>Userfrosting</title>
   </head>
