Finished permits CRUD
Finished implementing update permit feature, some minor backend
changes, renamed `site_pages` to `site_authorization`

--- a/models/menu-templates/menu-2.html
+++ b/models/menu-templates/menu-2.html
@@ -24,7 +24,7 @@
 		  <ul class='dropdown-menu'>
 			  <li class='navitem-site-settings'><a href='site_settings.php'><i class='fa fa-globe'></i> Site Configuration</a></li>
               <li class='navitem-groups'><a href='groups.php'><i class='fa fa-users'></i> Groups</a></li>
-              <li class='navitem-site-pages'><a href='site_pages.php'><i class='fa fa-files-o'></i> Site Pages</a></li>
+              <li class='navitem-site-pages'><a href='site_authorization.php'><i class='fa fa-key'></i> Authorization</a></li>
 		  </ul>
 	  </li>
   </ul>
