Added jQuery and bootstrap

--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-    
+    <meta name="author" content="">
+
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <link href="bootstrap/css/bootstrap-custom.css" rel="stylesheet">
+    <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
+	    
     <link rel="canonical" href="http://www.userfrosting.com">
 
-    <title>Userfrosting</title>
+    <title>Userfrosting: A secure, modern user management system based on UserCake, jQuery, and Bootstrap</title>
   </head>
 
   <body>
@@ -34,6 +41,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+      <div class='alert alert-warning'>Please note that the current version of UserFrosting (0.7) will be retired soon, as we release UserFrosting 0.2.0 (butterflyknife).  For more details about the exciting new features that butterflyknife includes, please see <a href='https://github.com/alexweissman/UserFrosting/wiki'>the wiki</a>.</div>
         <h1>
 <a name="userfrosting-017" class="anchor" href="#userfrosting-017"><span class="octicon octicon-link"></span></a>UserFrosting 0.1.7</h1>
 
