--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: "UserFrosting: A secure, modern user management system based on UserCake, jQuery, and Bootstrap"
+---
+
 <div class="header-box">
   <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
