Moved some stuff around

--- a/features.html
+++ b/features.html
@@ -160,25 +160,8 @@ title: "UserFrosting: Features"
 
 <h2 id="toc_6"><a name="user-management"></a><i class='fa fa-users'></i> User Management</h2>
 
+<div class="alert alert-info">Coming soon!</div>
+
 <h2 id="toc_7"><a name="templating"></a><i class='fa fa-puzzle-piece'></i> Templating</h2>
 
-<h2 id="toc_8">Design Principles</h2>
-
-<h3 id="toc_9">No assembly required</h3>
-
-<p>If you&#39;re reading this, chances are that you already have a web project in mind.  You may have even started to code and write content for your project.  But whether it&#39;s a private forum for your WoW guild, an employee management system for your small business, or the next big social network, we&#39;re guessing that you probably want to get started on implementing your awesome new idea as quickly as possible. </p>
-
-<p>You&#39;re here because you need a way to manage user accounts for your service/forum/orbital laser cannon, and you don&#39;t want to reinvent the wheel.  There are, of course, frameworks that can do user management, but you don&#39;t want to spend your valuable time learning the ins and outs of a particular framework, only to discover that it&#39;s not really what you need.  You might also have some existing code and content that you don&#39;t want to have to rewrite to fit the framework&#39;s way of doing things.  UserFrosting is meant for developers who want to take advantage of a pre-designed user management system, but write their own code in native PHP.</p>
-
-<p>Whatever the case may be, you probably want something that is ready to go straight out of the box, without forcing you to start from <code>Hello World</code>.  UserFrosting delivers this and more.  With some basic configuration and an easy-to-use installer, you&#39;ll be ready to create and manage user accounts in 5 minutes or less - all you need is a web server running PHP 5.3 or greater, and a SQL database.</p>
-
-<h3 id="toc_10">Ease of use</h3>
-
-<ul>
-<li>Intuitive interface</li>
-<li>Mobile ready</li>
-</ul>
-
-<h3 id="toc_11">Flexibility</h3>
-
-<h3 id="toc_12">Extendability</h3>
+<div class="alert alert-info">Coming soon!</div>
