Added section on user management

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ Whatever the case may be, you probably want something that is ready to go straig
   <li> <a href="http://fontawesome.io">Font Awesome</a></li>
   <li> <a href="http://handlebarsjs.com/">Handlebars templating</a></li>
   <li> <a href="http://tablesorter.com">Tablesorter 2.0</a></li>
+  <li> <a href="https://github.com/twitter/typeahead.js">Typeahead addon for Bootstrap</a></li>
   <li> <a href="http://www.datejs.com">DateJS</a> </li>
   <li> <a href="http://bootstrap-switch.org">Bootstrap Switch</a> </li>
 </ul>
