--- a/features.html
+++ b/features.html
@@ -165,8 +165,9 @@ title: "UserFrosting: Features"
 <p>Upcoming features include pagination of the user list, and searching for users by name or other criteria.</p>
 <img src="images/demo-user-management.png">
 
-
-
 <h2 id="toc_7"><a name="templating"></a><i class='fa fa-puzzle-piece'></i> Templating</h2>
 
 <div class="alert alert-info">Coming soon!</div>
+
+<p>Individual user experience can be customized through the use of UserFrosting's various templated features.</p>
+
