--- a/models/menu-templates/menu-2.html
+++ b/models/menu-templates/menu-2.html
@@ -29,6 +29,7 @@
 	  </li>
   </ul>
   <ul class="nav navbar-master navbar-nav navbar-right">
+    <li class='navitem-pms'><a href="pm.php"><i class="fa fa-envelope"></i> Private Messages</a></li>
 	<li class="dropdown user-dropdown">
 	  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> #USERNAME# <b class="caret"></b></a>
 	  <ul class="dropdown-menu">
