Upgrade bootsole and add bootstrapradio

--- a/models/page-templates/head-account.html
+++ b/models/page-templates/head-account.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="#SITE_ROOT#css/bootstrap-switch.min.css" type="text/css" />
   <link rel="stylesheet" href="#SITE_ROOT#css/typeahead.css" type="text/css" />
   <link rel="stylesheet" href="#SITE_ROOT#css/datepicker.css" type="text/css" />
+  <link rel="stylesheet" href="#SITE_ROOT#css/bootstrapradio.css" type="text/css" />
   <!-- Conditional formatting -->
   <link rel="stylesheet" href="#SITE_ROOT#css/#SB_STYLE#">
   <link rel="stylesheet" href="#SITE_ROOT#css/tablesorter/theme.bootstrap.css">
@@ -29,6 +30,7 @@
   <script src="#SITE_ROOT#js/date.min.js"></script>
   <script src="#SITE_ROOT#js/handlebars-v1.2.0.js"></script>
   <script src="#SITE_ROOT#js/bootstrap-switch.min.js"></script>
+  <script src="#SITE_ROOT#js/bootstrapradio.js"></script>
   <script src="#SITE_ROOT#js/bootstrap-datepicker.js"></script>  
   <script src="#SITE_ROOT#js/tablesorter/jquery.tablesorter.min.js"></script>
   <script src="#SITE_ROOT#js/tablesorter/tables.js"></script>
