--- a/features.html
+++ b/features.html
@@ -162,7 +162,7 @@ title: "UserFrosting: Features"
 <h2 id="toc_6"><a name="user-management"></a><i class='fa fa-users'></i> User Management</h2>
 
 <p>UserFrosting provides a robust, intuitive interface for administrators to manage user accounts.  From the "users" page, admins can create new user accounts, edit existing user account information, activate, disable, and delete accounts.  Users can also be assigned/removed from different groups, and the user primary group can be set.</p>
-<p>Upcoming features include pagination of the user list, and searching for users by name or other criteria.</p>
+<p>With the new Tablesorter 2.0 widget (included), the user list is automatically paginated (client-side), and users can be searched by name or other criteria.  Upcoming features include server-side pagination for faster loading speeds.</p>
 <img src="images/demo-user-management.png">
 
 <h2 id="toc_7"><a name="templating"></a><i class='fa fa-puzzle-piece'></i> Templating</h2>
