--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: "UserFrosting: A secure, modern user management system based on UserCake,
 ---
 
 <div class="header-box">
+  <div class="alert alert-success"><i class="fa fa-newspaper-o"></i> The next version of UserFrosting is in development.  We promise to make it easier and faster for developers to extend, and to deliver more features for users and admins.  Check out the details <a href="0-3-0.html">here</a>.</div>
+
   <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
