--- a/0-3-0.html
+++ b/0-3-0.html
@@ -21,7 +21,7 @@ title: "UserFrosting: Upcoming features in v0.3.0"
         <div class="col-sm-4">
             <i class="fa fa-random"></i>
             <h4>Routing</h4>
-            <p>Fast, flexible URL routing with <a href="https://github.com/chriso/klein.php">Klein</a> to decouple web pages from PHP files.</p>
+            <p>Powerful routing and request/response abstractions with <a href="http://www.slimframework.com/">Slim</a> to decouple web pages from PHP files.</p>
         </div>
         <div class="col-sm-4">
             <i class="fa fa-database"></i>
@@ -42,8 +42,8 @@ title: "UserFrosting: Upcoming features in v0.3.0"
         </div>
         <div class="col-sm-4">
             <i class="fa fa-plug"></i>
-            <h4>Plugins</h4>
-            <p>A full-featured plugin system to easily create and share custom functionality.</p>
+            <h4>Plugins and Theming</h4>
+            <p>A full-featured plugin and theming system to easily create and share custom styles, layouts, and functionality.</p>
         </div>        
   
   </div>  
