--- a/0-3-0.html
+++ b/0-3-0.html
@@ -25,8 +25,8 @@ title: "UserFrosting: Upcoming features in v0.3.0"
         </div>
         <div class="col-sm-4">
             <i class="fa fa-database"></i>
-            <h4>ORM</h4>
-            <p>The <a href="http://redbeanphp.com/">Redbean</a> object relation mapper (ORM) will make it simpler to build queries and interact with multiple different types of database technologies.</p>
+            <h4>Data Modeling</h4>
+            <p>UserFrosting 0.3.0 boasts a rich object-oriented data model that can easily be modified and extended.</p>
         </div>          
   </div>
     <div class="row">
