--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "UserFrosting: A secure, modern user management system based on UserCake,
 ---
 
 <div class="header-box">
-  <div class="alert alert-success"><i class="fa fa-newspaper-o"></i> The next version of UserFrosting is in development.  We promise to make it easier and faster for developers to extend, and to deliver more features for users and admins.  Check out the details <a href="0-3-0.html">here</a>.</div>
+  <div class="alert alert-warning"><i class="fa fa-newspaper-o"></i> The documentation you see here is for UserFrosting 0.2.2.  We recently released UserFrosting 0.3.0, which is brings us up to date with modern programming paradigms.  We will be working on documentation for 0.3.0 over the next several weeks.  Check out the details <a href="0-3-0.html">here</a>.</div>
 
   <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
