--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "UserFrosting: A secure, modern user management system based on UserCake,
 ---
 
 <div class="header-box">
-  <div class="alert alert-warning"><i class="fa fa-newspaper-o"></i> The documentation you see here is for UserFrosting 0.2.2.  We recently released UserFrosting 0.3.0, which is brings us up to date with modern programming paradigms.  We will be working on documentation for 0.3.0 over the next several weeks.  Check out the details <a href="0-3-0.html">here</a>.</div>
+  <div class="alert alert-warning"><i class="fa fa-newspaper-o"></i> The documentation you see here is for UserFrosting 0.2.2.  We recently released UserFrosting 0.3.0, which brings us up to date with modern programming paradigms.  We will be working on documentation for 0.3.0 over the next several weeks.  In the mean time, check out a preview of the new website <a href="{{site.url}}/0.3.0">here</a>.</div>
 
   <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
