--- a/0.2.2/forms-api/index.html
+++ b/0.2.2/forms-api/index.html
@@ -6,7 +6,7 @@ title: "UserFrosting: Forms API"
 <h1>Forms API</h1>
 
 <p class="lead">
-These are pages which accept a GET request and return a prerendered HTML form.  Forms are rendered server-side so that they can be customized for a particular user's context.  For example, the "user" form will render differently if we are creating, versus updating, a user's information.  All form api pages are stored in the <code>forms</code> directory.  Success, error, and warning messages are sent to the <a href="{{site.url}}/0.2.2/features.html#errors">alert stream</a>, and can be accessed via <code>api/user_alerts.php</code>.
+These are pages which accept a GET request and return a prerendered HTML form.  Forms are rendered server-side so that they can be customized for a particular user's context.  For example, the "user" form will render differently if we are creating, versus updating, a user's information.  All form api pages are stored in the <code>forms</code> directory.  Success, error, and warning messages are sent to the <a href="{{site.url}}/0.2.2/features#errors">alert stream</a>, and can be accessed via <code>api/user_alerts.php</code>.
 </p>
 
 <div class="panel-group" id="api_forms">
