--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ title: "UserFrosting | Modern user management for PHP"
                         <h2>View, edit, sort, and create users</h2>
                         <hr class="star-primary">
                         <img src="img/portfolio/user.png" class="img-responsive img-centered" alt="">
-                        <p>Users description.</p>
+                        <p>Administrators can manually create new user accounts, change group assignments and access permissions, enable/disable, activate, and delete user accounts from the Users panel.</p>
                         <button type="button" class="btn btn-modal" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                     </div>
             </div>
@@ -379,7 +379,7 @@ title: "UserFrosting | Modern user management for PHP"
                         <h2>Create groups and hierarchies</h2>
                         <hr class="star-primary">
                         <img src="img/portfolio/groups.png" class="img-responsive img-centered" alt="">
-                        <p>Groups description.</p>
+                        <p>Create/edit/delete groups, and define fine-grained authorization rules for members of each group.  Users can belong to multiple groups, allowing for versatile manipulation of user permissions.</p>
                         <button type="button" class="btn btn-modal" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                     </div>
             </div>
