Links to old docs, chat

--- a/installation/index.html
+++ b/installation/index.html
@@ -7,6 +7,7 @@ title: "UserFrosting | Installing UserFrosting"
     <div class="container">
         <ol class="breadcrumb">
             <li><a href="{{site.url}}/">Home</a></li>
+            <li><a href="{{site.url}}/#get-started">Getting Started</a></li>
             <li class="active">Requirements and Installation</li>
         </ol>
     </div>
