--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -7,6 +7,7 @@ title: "UserFrosting | Tutorials"
     <div class="container">
         <ol class="breadcrumb">
             <li><a href="{{site.url}}/">Home</a></li>
+            <li><a href="{{site.url}}/#get-started">Getting Started</a></li>            
             <li class="active">Tutorials</li>
         </ol>
     </div>
