--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@ title: "UserFrosting | Modern user management for PHP"
                 </a> 
             </div>
             <div class="col-sm-4 palette-button">
-                <a href="{{site.url}}/components" class="palette-link">
+                <a href="{{site.url}}/navigating" class="palette-link">
                     <div class="palette-text">
-                        <i class="fa fa-4x fa-cubes"></i><br>
-                        Components
+                        <i class="fa fa-4x fa-compass"></i><br>
+                        Navigating the Code
                     </div>
                 </a> 
-            </div>              
+            </div>                         
             <div class="col-sm-4 palette-button">
                 <a href="{{site.url}}/tutorials" class="palette-link">
                     <div class="palette-text">
@@ -203,13 +203,13 @@ title: "UserFrosting | Modern user management for PHP"
                 </a> 
             </div>
             <div class="col-sm-4 palette-button">
-                <a href="{{site.url}}/glossary" class="palette-link">
+                <a href="{{site.url}}/components" class="palette-link">
                     <div class="palette-text">
-                        <i class="fa fa-4x fa-book"></i><br>
-                        Glossary
+                        <i class="fa fa-4x fa-cubes"></i><br>
+                        Components
                     </div>
                 </a> 
-            </div>
+            </div>             
             <div class="col-sm-4 palette-button">
                 <a href="{{site.url}}/security" class="palette-link">
                     <div class="palette-text">
