--- a/navigating/index.html
+++ b/navigating/index.html
@@ -1,6 +1,6 @@
 ---
 layout: new
-title: "UserFrosting | Tutorials"
+title: "UserFrosting | Navigating the Code"
 ---
 
 <header class="breadcrumb-header">
