--- a/security/index.html
+++ b/security/index.html
@@ -1,6 +1,6 @@
 ---
 layout: new
-title: "UserFrosting: Security Features"
+title: "UserFrosting | Security Features"
 ---
 
 <header class="breadcrumb-header">
